test/sensitive-data-searcher/invalid-files/invalid.ts
const a = () => {
    console.log('password')
}

let password: string
var username = '5'
password = 'beef'
const user = 'Magic'
let e = 'test'
